# adversarial-lab

./: .gitignore  pyproject.toml  requirements.txt  setup.py  temp.py  temp2.py  temp3.py
.github/workflows/: build-and-deploy-docs.yml
adversarial_lab/analytics/: __init__.py  custom_fields_tracker.py  llm_tracker.py
adversarial_lab/arsenal/: attacker_registry.py
adversarial_lab/arsenal/adversarial/blackbox/: finite_difference.py  nes.py  rgf.py  spsa.py
adversarial_lab/arsenal/whitebox/: cw.py  deepfool.py  fsgm.py  pgd.py  smoothfool.py
adversarial_lab/attacker/: attacker_base.py
adversarial_lab/attacker/adversarial/: base_adversarial_attacker.py  blackbox_misclassification.py  whitebox_misclassification.py
adversarial_lab/attacker/blackbox/: __init__.py  blackbox_attack_base.py  blackbox_llm_attack.py  blackbox_miscalssification.py
adversarial_lab/attacker/inference/: __init__.py  base_inference_attacker.py  blackbox_llm_attack.py  blackbox_misclassification.py  whitebox_misclassification.py
adversarial_lab/attacker/whitebox/: __init__.py  whitebox_attack_base.py  whitebox_misclassification.py
adversarial_lab/core/: model.py
adversarial_lab/core/gradient_estimator/: fd.py
adversarial_lab/core/noise_generators/: noise_generator_base.py
adversarial_lab/core/noise_generators/dataset/: trojan_image.py
adversarial_lab/core/noise_generators/tensor/: tensor_noise_generator_base.py
adversarial_lab/core/noise_generators/text/: multi_prompt_injection_noise_generator.py  prompt_injection_noise_generator.py  text_noise_generator_base.py
adversarial_lab/defenses/preprocessing/: __init__.py  base_preprocessing_defence.py
adversarial_lab/handlers/: handler_base.py  images_from_directory.py
examples/: 01 - Basic Whitebox Attack.ipynb  02 - BuiltIn Canonical WhiteBox Attacks.ipynb  03 - Basic BlackBox Attack.ipynb  04 - BuiltIn Canonical BlackBox Attacks.ipynb  05 - Analytics and Tracking.ipynb  06 - Video of Noise Change.ipynb
tests/core/: test_losses.py  test_trackers.py
