[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-lab"
version = "0.0.3"
description = "A unified library for performing adversarial attacks on ML models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pavan Reddy", email = "preddy.osdev@gmail.com" }
]
urls = { "Homepage" = "https://github.com/pavanreddyml/adversarial-lab" }

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = ["adversarial_lab"]
