[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-lab"
version = "0.0.3"
description = "A unified library for performing adversarial attacks on ML models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pavan Reddy", email = "preddy.osdev@gmail.com" }
]
urls = { "Homepage" = "https://github.com/pavanreddyml/adversarial-lab" }

[project.optional-dependencies]
"tensorflow" = ["tensorflow==2.18.0"]
"torch" = ["torch==2.4.1"]
"full" = [
    "tensorflow==2.18.0",
    "torch==2.4.1"
]
"testing" = [
    "pytest",
    "pytest-cov"
]
"build" = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "flake8==7.1.1",
    "mypy==1.12.0",
    "Sphinx==8.2.3",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-rtd-theme==3.0.2"
]

[tool.setuptools]
packages = ["adversarial_lab"]
