[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-lab"
version = "0.0.4"
description = "A unified library for performing adversarial attacks on ML models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Pavan Reddy", email = "preddy.osdev@gmail.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

# from your previous build logs
dependencies = [
  "matplotlib==3.9.2",
  "nltk==3.9.1",
  "numpy==1.26.4",
  "plotly==6.0.1"
]

[project.urls]
Homepage = "https://github.com/pavanreddyml/adversarial-lab"

[project.optional-dependencies]
tensorflow = ["tensorflow==2.18.0"]
torch = ["torch==2.4.1"]
full = ["tensorflow==2.18.0", "torch==2.4.1"]
testing = ["pytest==8.3.3", "pytest-cov==5.0.0"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["adversarial_lab*"] } }

[tool.setuptools.package-data]
adversarial_lab = ["*.md", "*.txt"]
